# pyoptiML

./: README.md  auto_ml_cli.py  import_file.py  init_setup.sh  preprocessing.py  preprocessing_data.py  pyoptiML.py  pyoptiml.py  pyprojecct.toml  requirements.txt  requirements_dev.txt  savefile.py  setup.cfg  setup.py  testing.py  tox.ini  trainingtesting.py
.github/workflows/: main.yml  python-publish.yml
src/optiML/: __init__.py  import_file.py  preprocessing_data.py  preprocessing_data_expert_mode.py  pyoptiml.py  savefile.py  trainingtesting.py
src/pyoptiML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
