[metadata]
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7

[options.extras_require]
testing =
    numpy>=1.24.2
    pandas>=1.5.3
    scikit-learn>=1.2.2
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
pyoptiML = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py